--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,8 @@
 body {
   color: black;
   background-color: #fff;
-  background-image: url('http://www.hemic.com/wp-content/themes/hemic/images/sky-1.png');
+  background-image: url('assets/sky-1.png');
+  background-repeat: no-repeat;
 }
 
 .clip-button {
