--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,36 +1,54 @@
+
 body {
   color: black;
   background-color: #fff;
   background-image: url('assets/sky-1.png');
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.clip-button {
-  margin: 5px;
+.app {
+  width: 90%;
+  margin: 0 5%;
 }
 
-.inspiration {
+.titles {
+  font-size: 4vh;
+  text-align: center;
+}
+
+.inspiration, .motivation {
   display: flex;
   flex: auto;
   flex-direction: row;
   flex-wrap: wrap;
-}
-
-.motivation {
-  display: flex;
-  flex: auto;
-  flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .clip-button {
-  display: flex;
-  flex: auto;
-  flex-direction: row;
-  border-color: #888;
-  background-color: #fff;
+    margin: 5px;
+    display: flex;
+    flex: auto;
+    flex-direction: row;
+    border-color: #888;
+    background-color: #fff;
+    width: 90vw;
+    font-size: 3vh;
+    display: inline-block;
+    word-wrap: break-word;
+    white-space: pre-line;
+}
+
+@media screen and (min-width: 1600px){
+  .clip-button {
+      width: 40vw;
+  }
 }
 
 .major-heading {
-  font-size: 60px;
+  width: 100%;
+  text-align: center;
+  font-size: 5vh;
 }
+
+
